# EmojiPicker

./: CMakeLists.txt  Main.qml  emojipicker.qrc  main.cpp  model.qml
